--- a/pages/fonts.html
+++ b/pages/fonts.html
@@ -28,8 +28,8 @@
                     <img src="/images/user-solid-60.png" class="avatar-img rounded-circle img-fluid" />
                 </div>
                 <div class="user-info col name pl-0">
-                    <h6>User Name</h6>
-                    <h6>User Role</h6>
+                    <h6 class="user-name">User Name</h6>
+                    <h6 class="user-position">User Role</h6>
                 </div>
             </div>
             <form class="form-inline search">
@@ -114,55 +114,75 @@
                         </a>
                     </div>
                 </li>
+                <li class="p-3 mb-2">
+                    <div class="rounded-pill sidebar-item pt-1 pb-1 pl-4">
+                        <a class="sidebar-link text-light" href="/pages/settings.html">
+                            <i class='bx bx-cog text-light pl-2 mr-2'></i><span>Settings</span>
+                        </a>
+                    </div>
+                </li>
             </ul>
         </div>
         <div class="content">
             <div class="container mb-4 px-5">
                 <!-- title-fonts -->
                 <div class="row mt-5">
-                    <div class="col p-3 mb-5 mr-2 shadow bg-white rounded">
+                    <div class="col-lg-4 col-md-4 col-sm-12">
+                        <div class="shadow bg-white rounded p-3 mb-5">
                         <h5>Title(32px):</h5>
                         <div class="bg-light p-2 mt-3 rounded  text-center">
                             <h1 class="">Title</h1>
                         </div>
+                        </div>
                     </div>
-                    <div class="col p-3 mb-5 mr-2 shadow bg-white rounded">
+                    <div class="col-lg-4 col-md-4 col-sm-12">
+                        <div class="shadow bg-white rounded p-3 mb-5">
                         <h5>Title(32px):</h5>
                         <div class="bg-light p-2 mt-3 rounded  text-center">
                             <h1 class="font-italic">Title</h1>
                         </div>
+                        </div>
                     </div>
-                    <div class="col p-3 mb-5 mr-2 shadow bg-white rounded">
+                    <div class="col-lg-4 col-md-4 col-sm-12">
+                        <div class="shadow bg-white rounded p-3 mb-5">
                         <h5>Title(32px):</h5>
                         <div class="bg-light p-2 mt-3 rounded  text-center">
                             <h1 class="font-weight-light">Title</h1>
+                        </div>
                         </div>
                     </div>
                 </div>
                 <!-- subtitle-fonts -->
                 <div class="row mt-5">
-                    <div class="col p-3 mb-5 mr-2 shadow bg-white rounded">
+                    <div class="col-lg-4 col-md-4 col-sm-6">
+                        <div class="shadow bg-white rounded p-3 mb-5">
                         <h5>Subtitle(24px):</h5>
                         <div class="bg-light p-2 mt-3 rounded text-center">
                             <h3 class="">Title</h3>
                         </div>
                     </div>
-                    <div class="col p-3 mb-5 mr-2 shadow bg-white rounded">
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-6">
+                        <div class="shadow bg-white rounded p-3 mb-5">
                         <h5>Subtitle(24px):</h5>
                         <div class="bg-light p-2 mt-3 rounded text-center">
                             <h3 class="font-italic">Title</h3>
                         </div>
                     </div>
-                    <div class="col p-3 mb-5 mr-2 shadow bg-white rounded">
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-12">
+                        <div class="shadow bg-white rounded p-3 mb-5">
                         <h5>Subtitle(24px):</h5>
                         <div class="bg-light p-2 mt-3 rounded text-center">
                             <h3 class="font-weight-light">Title</h3>
                         </div>
                     </div>
+                    </div>
                 </div>
                 <!-- paragraph-fonts -->
                 <div class="row mt-5">
-                    <div class="col p-3 mb-5 mr-2 shadow bg-white rounded">
+                    <div class="col-lg-6 col-md-6 col-sm-12" >
+                        <div class="shadow bg-white rounded p-3 mb-5" style="min-height: 230px;">
                         <h5>Paragraph(16px):</h5>
                         <div class="bg-light p-2 mt-3 rounded">
                             <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure natus culpa, nam
@@ -170,7 +190,9 @@
                                 repellat totam provident, dolorum nihil eos. Ratione?</p>
                         </div>
                     </div>
-                    <div class="col p-3 mb-5 mr-2 shadow bg-white rounded">
+                    </div>
+                    <div class="col-lg-6 col-md-6 col-sm-12">
+                        <div class="shadow bg-white rounded p-3 mb-5" style="min-height: 230px;">
                         <h5>Paragraph(16px):</h5>
                         <div class="bg-light p-2 mt-3 rounded">
                             <p class="font-weight-light font-italic">Lorem ipsum, dolor sit amet consectetur adipisicing
@@ -178,31 +200,40 @@
                                 itaque accusantium dolorum omnis cumque, assumenda recusandae quos illum architecto
                                 tempora?</p>
                         </div>
+                        </div>
                     </div>
                 </div>
                 <!-- date&time-fonts  -->
                 <div class="mt-5">
                     <h5>Date and Time:</h5>
                     <div class="row">
-                        <div class="col p-3 mb-5 mr-2 shadow bg-white rounded">
+                        <div class="col-lg-3 col-md-3 col-sm-6">
+                            <div class="shadow bg-white rounded p-3 mb-5">
                             <div class="bg-light p-2 mt-3 rounded text-center">
                                 <p class="date-time">2023-01-01</p>
                             </div>
+                            </div>
                         </div>
-                        <div class="col p-3 mb-5 mr-2 shadow bg-white rounded">
+                        <div class="col-lg-3 col-md-3 col-sm-6">
+                            <div class="shadow bg-white rounded p-3 mb-5">
                             <div class="bg-light p-2 mt-3 rounded text-center">
                                 <p class="date-time">January 1, 2023</p>
                             </div>
-                        </div>
-                        <div class="col p-3 mb-5 mr-2 shadow bg-white rounded">
-                            <div class="bg-light p-2 mt-3 rounded text-center">
-                                <p class="date-time">8:45 AM</p>
                             </div>
                         </div>
-                        <div class="col p-3 mb-5 mr-2 shadow bg-white rounded">
+                        <div class="col-lg-3 col-md-3 col-sm-6">
+                            <div class="shadow bg-white rounded p-3 mb-5">
+                            <div class="bg-light p-2 mt-3 rounded text-center">
+                                <p class="date-time">8:35 AM</p>
+                            </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-3 col-sm-6">
+                            <div class="shadow bg-white rounded p-3 mb-5">
                             <div class="bg-light p-2 mt-3 rounded text-center">
                                 <p class="date-time">2023-01-01 8:45
                                 </p>
+                            </div>
                             </div>
                         </div>
                     </div>
