--- a/pages/calendar.html
+++ b/pages/calendar.html
@@ -33,8 +33,8 @@
                     <img src="/images/user-solid-60.png" class="avatar-img rounded-circle img-fluid" />
                 </div>
                 <div class="user-info col name pl-0">
-                    <h6>User Name</h6>
-                    <h6>User Role</h6>
+                    <h6 class="user-name">User Name</h6>
+                    <h6 class="user-position">User Role</h6>
                 </div>
             </div>
             <form class="form-inline search">
@@ -116,10 +116,17 @@
                         </a>
                     </div>
                 </li>
+                <li class="p-3 mb-2">
+                    <div class="rounded-pill sidebar-item pt-1 pb-1 pl-4">
+                        <a class="sidebar-link text-light" href="/pages/settings.html">
+                            <i class='bx bx-cog text-light pl-2 mr-2'></i><span>Settings</span>
+                        </a>
+                    </div>
+                </li>
             </ul>
         </div>
         <div class="content px-0">
-            <div class="container mb-4">
+            <div class="container px-5 mb-4">
                 <div class="row mt-5">
                     <div class="col-lg-6 col-md-6 col-sm-12 mb-2">
                         <div class="p-3 shadow bg-white rounded mx-auto">
@@ -146,6 +153,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="exampleFormControlSelect2">Invite People</label>
+                                <br />
                                 <select class="form-control selectpicker w-75" name="user" multiple data-live-search="true"
                                     required>
                                     <option value="Invite People">Invite People</option>
