--- a/pages/formsInputs.html
+++ b/pages/formsInputs.html
@@ -40,8 +40,8 @@
                     <img src="/images/user-solid-60.png" class="avatar-img rounded-circle img-fluid" />
                 </div>
                 <div class="user-info col name pl-0">
-                    <h6>User Name</h6>
-                    <h6>User Role</h6>
+                    <h6 class="user-name">User Name</h6>
+                    <h6 class="user-position">User Role</h6>
                 </div>
             </div>
             <form class="form-inline search">
@@ -125,6 +125,13 @@
                     <div class="rounded-pill sidebar-item pt-1 pb-1 pl-4">
                         <a class="sidebar-link text-light" href="/pages/tables.html">
                             <i class='bx bx-table text-light pl-2 mr-2'></i><span>Tables</span>
+                        </a>
+                    </div>
+                </li>
+                <li class="p-3 mb-2">
+                    <div class="rounded-pill sidebar-item pt-1 pb-1 pl-4">
+                        <a class="sidebar-link text-light" href="/pages/settings.html">
+                            <i class='bx bx-cog text-light pl-2 mr-2'></i><span>Settings</span>
                         </a>
                     </div>
                 </li>
