--- a/pages/settings.html
+++ b/pages/settings.html
@@ -39,7 +39,7 @@
                 </div>
                 <div class="user-info col name pl-0">
                     <h6 class="user-name">User Name</h6>
-                    <h6 class="user-role">User Role</h6>
+                    <h6 class="user-position">User Role</h6>
                 </div>
             </div>
             <form class="form-inline search">
@@ -69,7 +69,7 @@
                     <img src="/images/tu-logo.png" class="img-fluid logo" style="height:50px ;" />
                 </div>
                 <li class="p-3 mb-2">
-                    <div class="rounded-pill sidebar-item pt-1 pb-1 pl-4 active">
+                    <div class="rounded-pill sidebar-item pt-1 pb-1 pl-4">
                         <a class="sidebar-link text-light " href="/pages/index.html">
                             <i class='bx bxs-dashboard text-light pl-2 mr-2'></i><span>Dashboard</span>
                         </a>
@@ -124,24 +124,40 @@
                         </a>
                     </div>
                 </li>
+                <li class="p-3 mb-2">
+                    <div class="rounded-pill sidebar-item pt-1 pb-1 pl-4 active">
+                        <a class="sidebar-link text-light" href="/pages/settings.html">
+                            <i class='bx bx-cog text-light pl-2 mr-2'></i><span>Settings</span>
+                        </a>
+                    </div>
+                </li>
             </ul>
         </div>
         <div class="content px-0">
-            <div class="container mb-4">
+            <div class="container px-5 mb-4">
                 <div class="row mt-5">
                     <div class="col-lg-6 col-md-6 col-sm-12 mb-3">
                         <div class="p-3 shadow bg-white rounded mx-auto">
                             <h5>Personal Information</h5>
                             <hr />
                             <form class="personal-information mt-4" method="post">
-                                <div class="form-group text-center">
-                                    <img src="/images/user-solid-60.png" class="rounded-circle img-fluid bg-dark" />
-                                    <input type="file" class="new-avatar">
-                                </div>
                                 <div class="form-group">
                                     <label for="exampleInputName">Name</label>
                                     <span class="bx bx-user form-control-icon"></span>
                                     <input type="text" class="form-control icon" id="userName">
+                                </div>
+                                <div class="form-group">
+                                    <label for="exampleFormControlSelect2">Position</label>
+                                    <span class="bx bx-user form-control-icon"></span>
+                                    <br />
+                                    <select class="form-control icon selectpicker" name="user"data-live-search="true" id="position" required>
+                                        <option  value="Position">Select You'r Position</option>
+                                        <option value="Position 1" data-tokens="Position 1">Position 1</option>
+                                        <option value="Position 2" data-tokens="Position 2">Position 2</option>
+                                        <option value="Position 3" data-tokens="Position 3">Position 3</option>
+                                        <option value="Position 4" data-tokens="Position 4">Position 4</option>
+                                        <option value="Position 5" data-tokens="Position 5">Position 5</option>
+                                    </select>
                                 </div>
                                 <div class="form-group">
                                     <label for="exampleInputEmail1">Email address</label>
