--- a/pages/statistics.html
+++ b/pages/statistics.html
@@ -28,8 +28,8 @@
                     <img src="/images/user-solid-60.png" class="avatar-img rounded-circle img-fluid" />
                 </div>
                 <div class="user-info col name pl-0">
-                    <h6>User Name</h6>
-                    <h6>User Role</h6>
+                    <h6 class="user-name">User Name</h6>
+                    <h6 class="user-position">User Role</h6>
                 </div>
             </div>
             <form class="form-inline search">
@@ -114,9 +114,16 @@
                         </a>
                     </div>
                 </li>
+                <li class="p-3 mb-2">
+                    <div class="rounded-pill sidebar-item pt-1 pb-1 pl-4">
+                        <a class="sidebar-link text-light" href="/pages/settings.html">
+                            <i class='bx bx-cog text-light pl-2 mr-2'></i><span>Settings</span>
+                        </a>
+                    </div>
+                </li>
             </ul>
         </div>
-        <div class="content px-3">
+        <div class="content">
                 <div class="container px-5 mb-4">
                 <div class="row mt-5">
                     <div class="col p-3 mb-5 mr-2 shadow bg-white rounded w-50">
