--- a/pages/tables.html
+++ b/pages/tables.html
@@ -28,8 +28,8 @@
                     <img src="/images/user-solid-60.png" class="avatar-img rounded-circle img-fluid" />
                 </div>
                 <div class="user-info col name pl-0">
-                    <h6>User Name</h6>
-                    <h6>User Role</h6>
+                    <h6 class="user-name">User Name</h6>
+                    <h6 class="user-position">User Role</h6>
                 </div>
             </div>
             <form class="form-inline search">
@@ -85,6 +85,7 @@
                             <span class="dropdown-toggle"></span>
                         </a>
                     </div>
+
                     <ul class="menu list-group list-group-flush">
                         <hr />
                         <li class="sidebar-item ml-2 pl-3 bg-dark rounded-pill pb-1 mb-1"><a class="text-light"
@@ -110,6 +111,13 @@
                     <div class="rounded-pill sidebar-item pt-1 pb-1 pl-4 active">
                         <a class="sidebar-link text-light" href="/pages/tables.html">
                             <i class='bx bx-table text-light pl-2 mr-2'></i><span>Tables</span>
+                        </a>
+                    </div>
+                </li>
+                <li class="p-3 mb-2">
+                    <div class="rounded-pill sidebar-item pt-1 pb-1 pl-4">
+                        <a class="sidebar-link text-light" href="/pages/settings.html">
+                            <i class='bx bx-cog text-light pl-2 mr-2'></i><span>Settings</span>
                         </a>
                     </div>
                 </li>
