--- a/pages/statistics.html
+++ b/pages/statistics.html
@@ -144,9 +144,13 @@
                           </div>
                     </div>
                     <div class="col p-3 mb-5 mr-2 shadow bg-white rounded">
-                        <div>
-                            <canvas class="col" id="doughnut-chart-1"></canvas>
+                        <div class="mx-auto doughnut-charts">
+                        <div class="row" >
+                            <canvas class="col-lg-4 col-md-4 col-sm-12" id="doughnut-chart-1"></canvas>
+                            <canvas class="col-lg-4 col-md-4 col-sm-12" id="doughnut-chart-2"></canvas>
+                            <canvas class="col-lg-4 col-md-4 col-sm-12" id="doughnut-chart-3"></canvas>
                           </div>
+                        </div>
                           <!-- <div>
                              <canvas class="col" id="doughnut-chart-2"></canvas> 
                           </div> -->
@@ -154,14 +158,11 @@
                     </div>
                 </div>
                 <div class="row mt-5">
-                    <div class="col p-3 mb-5 mr-2 shadow bg-white rounded w-50">
+                    <div class="col-12 p-3 mb-5 mr-2 shadow bg-white rounded w-50">
                         <div>
                             <canvas id="bubble-chart"></canvas>
                           </div>
                        
-                    </div>
-                    <div class="col p-3 mb-5 mr-2 shadow bg-white rounded">
-                        <canvas class="col" id="doughnut-chart-2"></canvas>
                     </div>
                 </div>
             </div>
