--- a/pages/formsInputs.html
+++ b/pages/formsInputs.html
@@ -5,7 +5,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <title>TU Dashboard</title>
+    <link rel="icon" type="image/x-icon" href="/images/tu-logo.png">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Dropify/0.2.0/css/dropify.min.css"
         integrity="sha512-1le5umV712TnW47Lwf6Ug6kkZk1g6rPGOREBLKG8SvrFCNuCYPlCwwxIXBmRsi0q2BTWvbOrHiHfz0LvkX+1VA=="
@@ -25,7 +26,7 @@
 </head>
 
 <body class="formsInputs-body">
-    <nav class="navbar navbar-light bg-light shadow-sm bg-dark">
+    <nav class="navbar navbar-dark bg-dark shadow-sm bg-dark">
         <div class="container">
             <!-- <button class="navbar-toggler" type="button">
                 <span class="navbar-toggler-icon"></span>
@@ -36,10 +37,10 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="avatar row">
-                <div class="col-3 pr-1 pl-0">
+                <div class="col pr-1 pl-0">
                     <img src="/images/user-solid-60.png" class="avatar-img rounded-circle img-fluid" />
                 </div>
-                <div class="user-info col name pl-0">
+                <div class="col-6 user-info name pl-0">
                     <h6 class="user-name">User Name</h6>
                     <h6 class="user-position">User Role</h6>
                 </div>
@@ -298,61 +299,59 @@
                 </div>
                 <div class="row mt-5">
                     <div class="col-lg-4 col-md-4 col-sm-6">
-                        <form class="shadow bg-white rounded text-center p-3 mb-3"
-                            style="min-height: 60px;">
+                        <form class="shadow bg-white rounded text-center p-3 mb-3" style="min-height: 60px;">
                             <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+                                <input class="form-check-input" name="checkbox" type="checkbox" id="inlineCheckbox1" value="option1">
                                 <label class="form-check-label" for="inlineCheckbox1">1</label>
                             </div>
                             <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
+                                <input class="form-check-input" name="checkbox" type="checkbox" id="inlineCheckbox2" value="option2">
                                 <label class="form-check-label" for="inlineCheckbox2">2</label>
                             </div>
                             <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+                                <input class="form-check-input" name="checkbox" type="checkbox" id="inlineCheckbox3" value="option3">
                                 <label class="form-check-label" for="inlineCheckbox3">3</label>
                             </div>
                             <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="checkbox" id="inlineCheckbox4" value="option4">
+                                <input class="form-check-input" name="checkbox" type="checkbox" id="inlineCheckbox4" value="option4">
                                 <label class="form-check-label" for="inlineCheckbox4">4</label>
                             </div>
                             <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="checkbox" id="inlineCheckbox5" value="option5">
+                                <input class="form-check-input" name="checkbox" type="checkbox" id="inlineCheckbox5" value="option5">
                                 <label class="form-check-label" for="inlineCheckbox5">5</label>
                             </div>
                         </form>
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-6">
-                        <form class="shadow bg-white rounded text-center p-3 ml-1 mb-3"
-                            style="min-height: 60px;">
+                        <form class="shadow bg-white rounded text-center p-3 ml-1 mb-3" style="min-height: 60px;">
                             <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" id="inlineradio1" value="option1">
+                                <input class="form-check-input" name="radio" type="radio" id="inlineradio1" value="option1">
                                 <label class="form-check-label" for="inlineradio1">1</label>
                             </div>
                             <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" id="inlineradio2" value="option2">
+                                <input class="form-check-input" name="radio" type="radio" id="inlineradio2" value="option2">
                                 <label class="form-check-label" for="inlineradio2">2</label>
                             </div>
                             <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" id="inlineradio3" value="option3">
+                                <input class="form-check-input" name="radio" type="radio" id="inlineradio3" value="option3">
                                 <label class="form-check-label" for="inlineradio3">3</label>
                             </div>
                             <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" id="inlineradio4" value="option4">
+                                <input class="form-check-input" name="radio" type="radio" id="inlineradio4" value="option4">
                                 <label class="form-check-label" for="inlineradio4">4</label>
                             </div>
                             <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" id="inlineradio5" value="option5">
+                                <input class="form-check-input" name="radio" type="radio" id="inlineradio5" value="option5">
                                 <label class="form-check-label" for="inlineradio5">5</label>
                             </div>
                         </form>
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-12">
-                        <div class="shadow bg-white rounded text-center p-3 ml-1" style="min-height: 60px;">
+                        <div class="shadow bg-white rounded text-center p-3 ml-1">
                             <div class="toggleBox">
                                 <input type="checkbox">
-                                <label for="" class="onbtn">ON</label>
-                                <label for="" class="ofbtn">Off</label>
+                                <label for="" class="onbtn"></label>
+                                <label for="" class="ofbtn"></label>
                             </div>
                         </div>
                     </div>
