--- a/pages/calendar.html
+++ b/pages/calendar.html
@@ -1,9 +1,12 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>TU Dashboard</title>
+    <link rel="icon" type="image/x-icon" href="/images/tu-logo.png">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
@@ -18,21 +21,23 @@
         crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
+
 <body style="height: 100%;">
-    <nav class="navbar navbar-light bg-light shadow-sm bg-dark">
+    <nav class="navbar navbar-dark bg-dark shadow-sm bg-dark">
         <div class="container">
             <!-- <button class="navbar-toggler" type="button">
                 <span class="navbar-toggler-icon"></span>
             </button> -->
             <!-- <a class="navbar-brand">Navbar</a> -->
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="avatar row">
-                <div class="col-3 pr-1 pl-0">
+                <div class="col pr-1 pl-0">
                     <img src="/images/user-solid-60.png" class="avatar-img rounded-circle img-fluid" />
                 </div>
-                <div class="user-info col name pl-0">
+                <div class="col-6 user-info name pl-0">
                     <h6 class="user-name">User Name</h6>
                     <h6 class="user-position">User Role</h6>
                 </div>
@@ -49,8 +54,10 @@
     <div class="profil-box mb-4">
         <div class="shadow bg-dark rounded">
             <ul class="list-group list-group-flush">
-                <li class="list-group-item text-center bg-dark"><a class="text-light" href="/pages/formsInputs.html">Settings</a></li>
-                <li class="list-group-item text-center bg-dark"><a class="text-light" href="/pages/login.html">Sign in</a></li>
+                <li class="list-group-item text-center bg-dark"><a class="text-light"
+                        href="/pages/formsInputs.html">Settings</a></li>
+                <li class="list-group-item text-center bg-dark"><a class="text-light" href="/pages/login.html">Sign
+                        in</a></li>
             </ul>
         </div>
     </div>
@@ -130,53 +137,54 @@
                 <div class="row mt-5">
                     <div class="col-lg-6 col-md-6 col-sm-12 mb-2">
                         <div class="p-3 shadow bg-white rounded mx-auto">
-                        <h5>Add Event</h5>
-                        <hr />
-                        <form class="task-form" method="post">
-                            <div class="form-group">
-                                <label for="exampleInput">Title</label>
-                                <input type="text" class="form-control title w-75">
-                            </div>
-                            <div class="w-75">
+                            <h5>Add Event</h5>
+                            <hr />
+                            <form class="task-form" method="post">
                                 <div class="form-group">
-                                    <label for="exampleInput">Date & Time</label>
-                                    <div class="input-group date" id="datetimepicker1" data-target-input="nearest">
-                                        <input type="text" class="form-control datetimepicker-input"
-                                            data-target="#datetimepicker1" />
-                                        <div class="input-group-append" data-target="#datetimepicker1"
-                                            data-toggle="datetimepicker">
-                                            <div class="input-group-text"><i class="fa fa-calendar date-time-picker"></i>
+                                    <label for="exampleInput">Title</label>
+                                    <input type="text" class="form-control title w-75">
+                                </div>
+                                <div class="w-75">
+                                    <div class="form-group">
+                                        <label for="exampleInput">Date & Time</label>
+                                        <div class="input-group date" id="datetimepicker1" data-target-input="nearest">
+                                            <input type="text" class="form-control datetimepicker-input"
+                                                data-target="#datetimepicker1" />
+                                            <div class="input-group-append" data-target="#datetimepicker1"
+                                                data-toggle="datetimepicker">
+                                                <div class="input-group-text"><i
+                                                        class="fa fa-calendar date-time-picker"></i>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="exampleFormControlSelect2">Invite People</label>
-                                <br />
-                                <select class="form-control selectpicker w-75" name="user" multiple data-live-search="true"
-                                    required>
-                                    <option value="Invite People">Invite People</option>
-                                    <option value="User 1" data-tokens="User 1">User 1</option>
-                                    <option value="User 2" data-tokens="User 2">User 2</option>
-                                    <option value="User 3" data-tokens="User 3">User 3</option>
-                                    <option value="User 4" data-tokens="User 4">User 4</option>
-                                    <option value="User 5" data-tokens="User 5">User 5</option>
-                                </select>
-                            </div>
-                            <div class="text-center">
-                                <button type="submit" class="btn btn-primary mt-2 mb-4">Add Task</button>
-                            </div>
-                        </form>
+                                <div class="form-group">
+                                    <label for="exampleFormControlSelect2">Invite People</label>
+                                    <br />
+                                    <select class="form-control selectpicker w-75" name="user" multiple
+                                        data-live-search="true" required>
+                                        <option value="Invite People">Invite People</option>
+                                        <option value="User 1" data-tokens="User 1">User 1</option>
+                                        <option value="User 2" data-tokens="User 2">User 2</option>
+                                        <option value="User 3" data-tokens="User 3">User 3</option>
+                                        <option value="User 4" data-tokens="User 4">User 4</option>
+                                        <option value="User 5" data-tokens="User 5">User 5</option>
+                                    </select>
+                                </div>
+                                <div class="text-center">
+                                    <button type="submit" class="btn btn-primary mt-2 mb-4">Add Task</button>
+                                </div>
+                            </form>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12 ">
                         <div class="p-3 shadow bg-white rounded mx-auto time-line-box">
-                        <h5>Time Line</h5>
-                        <hr />
-                        <ul class="list-group time-line">
-                        </ul>
-                    </div>
+                            <h5>Time Line</h5>
+                            <hr />
+                            <ul class="list-group time-line">
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
