--- a/pages/errorPage.html
+++ b/pages/errorPage.html
@@ -5,7 +5,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <title>TU Dashboard</title>
+    <link rel="icon" type="image/x-icon" href="/images/tu-logo.png">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
@@ -14,20 +15,21 @@
 </head>
 
 <body style="height: 100%;">
-    <nav class="navbar navbar-light bg-light shadow-sm bg-dark">
+    <nav class="navbar navbar-dark bg-dark shadow-sm bg-dark">
         <div class="container">
             <!-- <button class="navbar-toggler" type="button">
                 <span class="navbar-toggler-icon"></span>
             </button> -->
             <!-- <a class="navbar-brand">Navbar</a> -->
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="avatar row">
-                <div class="col-3 pr-1 pl-0">
+                <div class="col pr-1 pl-0">
                     <img src="/images/user-solid-60.png" class="avatar-img rounded-circle img-fluid" />
                 </div>
-                <div class="user-info col name pl-0">
+                <div class="col-6 user-info name pl-0">
                     <h6 class="user-name">User Name</h6>
                     <h6 class="user-position">User Role</h6>
                 </div>
@@ -47,8 +49,10 @@
     <div class="profil-box mb-4">
         <div class="shadow bg-dark rounded">
             <ul class="list-group list-group-flush">
-                <li class="list-group-item text-center bg-dark"><a class="text-light" href="/pages/formsInputs.html">Settings</a></li>
-                <li class="list-group-item text-center bg-dark"><a class="text-light" href="/pages/login.html">Sign in</a></li>
+                <li class="list-group-item text-center bg-dark"><a class="text-light"
+                        href="/pages/formsInputs.html">Settings</a></li>
+                <li class="list-group-item text-center bg-dark"><a class="text-light" href="/pages/login.html">Sign
+                        in</a></li>
             </ul>
         </div>
     </div>
@@ -124,7 +128,7 @@
             </ul>
         </div>
         <div class="content px-0">
-            <div class="container w-50 mt-5 text-center">
+            <div class="container w-75 mt-5 text-center">
                 <h1 class="font-weight-bolder">404</h1>
                 <h1 class="font-weight-light mt-4 mb-4">Page Not Found</h1>
                 <a href="/pages/index.html" class="btn btn-dark rounded-pill">Back To Home</a>
