--- a/pages/fonts.html
+++ b/pages/fonts.html
@@ -5,7 +5,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <title>TU Dashboard</title>
+    <link rel="icon" type="image/x-icon" href="/images/tu-logo.png">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
@@ -14,20 +15,21 @@
 </head>
 
 <body class="fonts-body">
-    <nav class="navbar navbar-light bg-light shadow-sm bg-dark">
+    <nav class="navbar navbar-dark bg-dark shadow-sm bg-dark">
         <div class="container">
             <!-- <button class="navbar-toggler" type="button">
                 <span class="navbar-toggler-icon"></span>
             </button> -->
             <!-- <a class="navbar-brand">Navbar</a> -->
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="avatar row">
-                <div class="col-3 pr-1 pl-0">
+                <div class="col pr-1 pl-0">
                     <img src="/images/user-solid-60.png" class="avatar-img rounded-circle img-fluid" />
                 </div>
-                <div class="user-info col name pl-0">
+                <div class="col-6 user-info name pl-0">
                     <h6 class="user-name">User Name</h6>
                     <h6 class="user-position">User Role</h6>
                 </div>
@@ -47,8 +49,10 @@
     <div class="profil-box mb-4">
         <div class="shadow bg-dark rounded">
             <ul class="list-group list-group-flush">
-                <li class="list-group-item text-center bg-dark"><a class="text-light" href="/pages/formsInputs.html">Settings</a></li>
-                <li class="list-group-item text-center bg-dark"><a class="text-light" href="/pages/login.html">Sign in</a></li>
+                <li class="list-group-item text-center bg-dark"><a class="text-light"
+                        href="/pages/formsInputs.html">Settings</a></li>
+                <li class="list-group-item text-center bg-dark"><a class="text-light" href="/pages/login.html">Sign
+                        in</a></li>
             </ul>
         </div>
     </div>
@@ -129,26 +133,26 @@
                 <div class="row mt-5">
                     <div class="col-lg-4 col-md-4 col-sm-12">
                         <div class="shadow bg-white rounded p-3 mb-5">
-                        <h5>Title(32px):</h5>
-                        <div class="bg-light p-2 mt-3 rounded  text-center">
-                            <h1 class="">Title</h1>
-                        </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-4 col-sm-12">
-                        <div class="shadow bg-white rounded p-3 mb-5">
-                        <h5>Title(32px):</h5>
-                        <div class="bg-light p-2 mt-3 rounded  text-center">
-                            <h1 class="font-italic">Title</h1>
-                        </div>
+                            <h5>Title(32px):</h5>
+                            <div class="bg-light p-2 mt-3 rounded  text-center">
+                                <h1 class="">Title</h1>
+                            </div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-12">
                         <div class="shadow bg-white rounded p-3 mb-5">
-                        <h5>Title(32px):</h5>
-                        <div class="bg-light p-2 mt-3 rounded  text-center">
-                            <h1 class="font-weight-light">Title</h1>
+                            <h5>Title(32px):</h5>
+                            <div class="bg-light p-2 mt-3 rounded  text-center">
+                                <h1 class="font-italic">Title</h1>
+                            </div>
                         </div>
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-12">
+                        <div class="shadow bg-white rounded p-3 mb-5">
+                            <h5>Title(32px):</h5>
+                            <div class="bg-light p-2 mt-3 rounded  text-center">
+                                <h1 class="font-weight-light">Title</h1>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -156,50 +160,53 @@
                 <div class="row mt-5">
                     <div class="col-lg-4 col-md-4 col-sm-6">
                         <div class="shadow bg-white rounded p-3 mb-5">
-                        <h5>Subtitle(24px):</h5>
-                        <div class="bg-light p-2 mt-3 rounded text-center">
-                            <h3 class="">Title</h3>
+                            <h5>Subtitle(24px):</h5>
+                            <div class="bg-light p-2 mt-3 rounded text-center">
+                                <h3 class="">Title</h3>
+                            </div>
                         </div>
-                    </div>
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-6">
                         <div class="shadow bg-white rounded p-3 mb-5">
-                        <h5>Subtitle(24px):</h5>
-                        <div class="bg-light p-2 mt-3 rounded text-center">
-                            <h3 class="font-italic">Title</h3>
+                            <h5>Subtitle(24px):</h5>
+                            <div class="bg-light p-2 mt-3 rounded text-center">
+                                <h3 class="font-italic">Title</h3>
+                            </div>
                         </div>
-                    </div>
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-12">
                         <div class="shadow bg-white rounded p-3 mb-5">
-                        <h5>Subtitle(24px):</h5>
-                        <div class="bg-light p-2 mt-3 rounded text-center">
-                            <h3 class="font-weight-light">Title</h3>
+                            <h5>Subtitle(24px):</h5>
+                            <div class="bg-light p-2 mt-3 rounded text-center">
+                                <h3 class="font-weight-light">Title</h3>
+                            </div>
                         </div>
-                    </div>
                     </div>
                 </div>
                 <!-- paragraph-fonts -->
                 <div class="row mt-5">
-                    <div class="col-lg-6 col-md-6 col-sm-12" >
+                    <div class="col-lg-6 col-md-6 col-sm-12">
                         <div class="shadow bg-white rounded p-3 mb-5" style="min-height: 230px;">
-                        <h5>Paragraph(16px):</h5>
-                        <div class="bg-light p-2 mt-3 rounded">
-                            <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure natus culpa, nam
-                                asperiores recusandae et facilis doloribus aperiam iusto aliquam sequi, veniam minus
-                                repellat totam provident, dolorum nihil eos. Ratione?</p>
+                            <h5>Paragraph(16px):</h5>
+                            <div class="bg-light p-2 mt-3 rounded">
+                                <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure natus culpa,
+                                    nam
+                                    asperiores recusandae et facilis doloribus aperiam iusto aliquam sequi, veniam minus
+                                    repellat totam provident, dolorum nihil eos. Ratione?</p>
+                            </div>
                         </div>
-                    </div>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12">
                         <div class="shadow bg-white rounded p-3 mb-5" style="min-height: 230px;">
-                        <h5>Paragraph(16px):</h5>
-                        <div class="bg-light p-2 mt-3 rounded">
-                            <p class="font-weight-light font-italic">Lorem ipsum, dolor sit amet consectetur adipisicing
-                                elit. Aliquam ipsam autem praesentium amet doloribus unde quo debitis enim consectetur
-                                itaque accusantium dolorum omnis cumque, assumenda recusandae quos illum architecto
-                                tempora?</p>
-                        </div>
+                            <h5>Paragraph(16px):</h5>
+                            <div class="bg-light p-2 mt-3 rounded">
+                                <p class="font-weight-light font-italic">Lorem ipsum, dolor sit amet consectetur
+                                    adipisicing
+                                    elit. Aliquam ipsam autem praesentium amet doloribus unde quo debitis enim
+                                    consectetur
+                                    itaque accusantium dolorum omnis cumque, assumenda recusandae quos illum architecto
+                                    tempora?</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -209,31 +216,31 @@
                     <div class="row">
                         <div class="col-lg-3 col-md-3 col-sm-6">
                             <div class="shadow bg-white rounded p-3 mb-5">
-                            <div class="bg-light p-2 mt-3 rounded text-center">
-                                <p class="date-time">2023-01-01</p>
-                            </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-3 col-sm-6">
-                            <div class="shadow bg-white rounded p-3 mb-5">
-                            <div class="bg-light p-2 mt-3 rounded text-center">
-                                <p class="date-time">January 1, 2023</p>
-                            </div>
+                                <div class="bg-light p-2 mt-3 rounded text-center">
+                                    <p class="date-time">2023-01-01</p>
+                                </div>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-3 col-sm-6">
                             <div class="shadow bg-white rounded p-3 mb-5">
-                            <div class="bg-light p-2 mt-3 rounded text-center">
-                                <p class="date-time">8:35 AM</p>
-                            </div>
+                                <div class="bg-light p-2 mt-3 rounded text-center">
+                                    <p class="date-time">January 1, 2023</p>
+                                </div>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-3 col-sm-6">
                             <div class="shadow bg-white rounded p-3 mb-5">
-                            <div class="bg-light p-2 mt-3 rounded text-center">
-                                <p class="date-time">2023-01-01 8:45
-                                </p>
+                                <div class="bg-light p-2 mt-3 rounded text-center">
+                                    <p class="date-time">8:35 AM</p>
+                                </div>
                             </div>
+                        </div>
+                        <div class="col-lg-3 col-md-3 col-sm-6">
+                            <div class="shadow bg-white rounded p-3 mb-5">
+                                <div class="bg-light p-2 mt-3 rounded text-center">
+                                    <p class="date-time">2023-01-01 8:45
+                                    </p>
+                                </div>
                             </div>
                         </div>
                     </div>
