--- a/pages/index.html
+++ b/pages/index.html
@@ -5,7 +5,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <title>TU Dashboard</title>
+    <link rel="icon" type="image/x-icon" href="/images/tu-logo.png">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
@@ -14,7 +15,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-light bg-light shadow-sm bg-dark">
+    <nav class="navbar navbar-dark bg-dark shadow-sm bg-dark">
         <div class="container">
             <!-- <button class="navbar-toggler" type="button">
                 <span class="navbar-toggler-icon"></span>
@@ -22,13 +23,13 @@
             <!-- <a class="navbar-brand">Navbar</a> -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon  text-light"></span>
             </button>
             <div class="avatar row">
-                <div class="col-3 pr-1 pl-0">
+                <div class="col pr-1 pl-0">
                     <img src="/images/user-solid-60.png" class="avatar-img rounded-circle img-fluid" />
                 </div>
-                <div class="user-info col name pl-0">
+                <div class="col-6 user-info name pl-0">
                     <h6 class="user-name">User Name</h6>
                     <h6 class="user-position">User Role</h6>
                 </div>
@@ -129,71 +130,79 @@
         <div class="content px-0">
             <div class="container px-5 mb-4">
                 <div class="row mt-5">
-                    <div class="col p-3 pt-3 mb-5  mr-2 shadow bg-white rounded w-50 text-center">
-                        <div class="bg-light p-2 mt-3 rounded">
-                            <h2 class="mt-auto p-3">50</h2>
-                            <p>some text</p>
+                    <div class="col">
+                        <div class="shadow bg-white rounded p-3 mb-5 text-center" style="min-height: 300px;">
+                            <div class="bg-light p-2 mt-3 rounded">
+                                <h2 class="mt-auto p-3">50</h2>
+                                <p>some text</p>
+                            </div>
                         </div>
                     </div>
-                    <div class="col p-3 pt-3 mb-5 mr-2 shadow bg-white rounded w-50 text-center">
-                        <div class="bg-light p-2 mt-3 rounded">
-                            <h2 class="mt-auto p-3">200</h2>
-                            <p>some text</p>
+                    <div class="col">
+                        <div class="shadow bg-white rounded p-3 mb-5 text-center" style="min-height: 300px;">
+                            <div class="bg-light p-2 mt-3 rounded">
+                                <h2 class="mt-auto p-3">200</h2>
+                                <p>some text</p>
+                            </div>
                         </div>
                     </div>
-                    <div class="col p-3 mb-5 mr-2 shadow bg-white rounded">
-                        <div>
-                            <canvas id="pie-chart"></canvas>
+                    <div class="col-lg-4 col-md-4 col-sm-12">
+                        <div class="shadow bg-white rounded mb-5" style="min-height: 300px;">
+                            <div>
+                                <canvas class="mx-auto" id="pie-chart"></canvas>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="row mt-5">
-                    <div class="col p-3 mb-5 mr-2 shadow bg-white rounded w-50">
-                        <div>
-                            <canvas id="line-chart"></canvas>
+                    <div class="col-lg-6 col-md-6 col-sm-12">
+                        <div class="shadow bg-white rounded mb-5">
+                            <div>
+                                <canvas id="line-chart"></canvas>
+                            </div>
                         </div>
                     </div>
-                    <div class="col p-3 mb-5 mr-2 shadow bg-white rounded">
-                        <div>
-                            <canvas id="bar-chart"></canvas>
+                    <div class="col-lg-6 col-md-6 col-sm-12">
+                        <div class="shadow bg-white rounded mb-5">
+                            <div>
+                                <canvas id="bar-chart"></canvas>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="row mt-5 shadow bg-white rounded">
-                    <div class="col p-3 mb-5 mr-2 w-50">
-                        <div class="row mb-2">
-                            <div class="col">
-                                <img src="/images/avatar.png" class="rounded-circle img-fluid"
-                                    style="width: 50px;height:50px ;" />
-                                <span>User 1</span>
+                <div class="shadow bg-white rounded">
+                    <div class="row mt-5 pl-2 ">
+                        <div class="col p-3 mb-5 mr-2 w-50">
+                            <div class="row mb-2">
+                                <div class="col">
+                                    <img src="/images/avatar.png" class="rounded-circle img-fluid"
+                                        style="width: 50px;height:50px ;" />
+                                    <span>User 1</span>
+                                </div>
                             </div>
-                            <div class="col"></div>
+                            <div class="row mt-5">
+                                <div class="col">
+                                    <img src="/images/avatar.png" class="rounded-circle img-fluid"
+                                        style="width: 50px;height:50px ;" />
+                                    <span>User 2</span>
+                                </div>
+                            </div>
                         </div>
-                        <div class="row mt-5">
-                            <div class="col">
-                                <img src="/images/avatar.png" class="rounded-circle img-fluid"
-                                    style="width: 50px;height:50px ;" />
-                                <span>User 1</span>
+                        <div class="col p-3 mb-5 mr-2 w-50">
+                            <div class="row mb-2">
+                                <div class="col">
+                                    <img src="/images/avatar.png" class="rounded-circle img-fluid"
+                                        style="width: 50px;height:50px ;" />
+                                    <span>User 3</span>
+                                </div>
                             </div>
-                            <div class="col"></div>
-                        </div>
-                    </div>
-                    <div class="col p-3 mb-5 mr-2 w-50">
-                        <div class="row mb-2">
-                            <div class="col">
-                                <img src="/images/avatar.png" class="rounded-circle img-fluid"
-                                    style="width: 50px;height:50px ;" />
-                                <span>User 1</span>
+                            <div class="row mt-5">
+                                <div class="col">
+                                    <img src="/images/avatar.png" class="rounded-circle img-fluid"
+                                        style="width: 50px;height:50px ;" />
+                                    <span>User 4</span>
+                                </div>
                             </div>
-                            <div class="col"></div>
-                        </div>
-                        <div class="row mt-5">
-                            <div class="col">
-                                <img src="/images/avatar.png" class="rounded-circle img-fluid"
-                                    style="width: 50px;height:50px ;" />
-                                <span>User 1</span>
-                            </div>
-                            <div class="col"></div>
                         </div>
                     </div>
                 </div>
