--- a/pages/settings.html
+++ b/pages/settings.html
@@ -5,7 +5,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <title>TU Dashboard</title>
+    <link rel="icon" type="image/x-icon" href="/images/tu-logo.png">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
@@ -23,7 +24,7 @@
 </head>
 
 <body style="height: 100%;">
-    <nav class="navbar navbar-light bg-light shadow-sm bg-dark">
+    <nav class="navbar navbar-dark bg-dark shadow-sm bg-dark">
         <div class="container">
             <!-- <button class="navbar-toggler" type="button">
                 <span class="navbar-toggler-icon"></span>
@@ -34,10 +35,10 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="avatar row">
-                <div class="avatar-col col-3 pr-1 pl-0">
+                <div class="col pr-1 pl-0">
                     <img src="/images/user-solid-60.png" class="avatar-img rounded-circle img-fluid" />
                 </div>
-                <div class="user-info col name pl-0">
+                <div class="col-6 user-info name pl-0">
                     <h6 class="user-name">User Name</h6>
                     <h6 class="user-position">User Role</h6>
                 </div>
@@ -57,8 +58,10 @@
     <div class="profil-box mb-4">
         <div class="shadow bg-dark rounded">
             <ul class="list-group list-group-flush">
-                <li class="list-group-item text-center bg-dark"><a class="text-light" href="/pages/formsInputs.html">Settings</a></li>
-                <li class="list-group-item text-center bg-dark"><a class="text-light" href="/pages/login.html">Sign in</a></li>
+                <li class="list-group-item text-center bg-dark"><a class="text-light"
+                        href="/pages/formsInputs.html">Settings</a></li>
+                <li class="list-group-item text-center bg-dark"><a class="text-light" href="/pages/login.html">Sign
+                        in</a></li>
             </ul>
         </div>
     </div>
@@ -150,8 +153,9 @@
                                     <label for="exampleFormControlSelect2">Position</label>
                                     <span class="bx bx-user form-control-icon"></span>
                                     <br />
-                                    <select class="form-control icon selectpicker" name="user"data-live-search="true" id="position" required>
-                                        <option  value="Position">Select You'r Position</option>
+                                    <select class="form-control icon selectpicker" name="user" data-live-search="true"
+                                        id="position" required>
+                                        <option value="Position">Select You'r Position</option>
                                         <option value="Position 1" data-tokens="Position 1">Position 1</option>
                                         <option value="Position 2" data-tokens="Position 2">Position 2</option>
                                         <option value="Position 3" data-tokens="Position 3">Position 3</option>
