--- a/pages/tables.html
+++ b/pages/tables.html
@@ -5,7 +5,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <title>TU Dashboard</title>
+    <link rel="icon" type="image/x-icon" href="/images/tu-logo.png">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
@@ -14,20 +15,21 @@
 </head>
 
 <body style="height: 110%;">
-    <nav class="navbar navbar-light bg-light shadow-sm bg-dark">
+    <nav class="navbar navbar-dark bg-dark shadow-sm bg-dark">
         <div class="container">
             <!-- <button class="navbar-toggler" type="button">
                 <span class="navbar-toggler-icon"></span>
             </button> -->
             <!-- <a class="navbar-brand">Navbar</a> -->
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="avatar row">
-                <div class="col-3 pr-1 pl-0">
+                <div class="col pr-1 pl-0">
                     <img src="/images/user-solid-60.png" class="avatar-img rounded-circle img-fluid" />
                 </div>
-                <div class="user-info col name pl-0">
+                <div class="col-6 user-info name pl-0">
                     <h6 class="user-name">User Name</h6>
                     <h6 class="user-position">User Role</h6>
                 </div>
@@ -47,8 +49,10 @@
     <div class="profil-box mb-4">
         <div class="shadow bg-dark rounded">
             <ul class="list-group list-group-flush">
-                <li class="list-group-item text-center bg-dark"><a class="text-light" href="/pages/formsInputs.html">Settings</a></li>
-                <li class="list-group-item text-center bg-dark"><a class="text-light" href="/pages/login.html">Sign in</a></li>
+                <li class="list-group-item text-center bg-dark"><a class="text-light"
+                        href="/pages/formsInputs.html">Settings</a></li>
+                <li class="list-group-item text-center bg-dark"><a class="text-light" href="/pages/login.html">Sign
+                        in</a></li>
             </ul>
         </div>
     </div>
@@ -124,7 +128,7 @@
             </ul>
         </div>
         <div class="content px-0">
-                <div class="container mb-4">
+            <div class="container mb-4">
                 <div class="bg-white mt-5">
                     <table class="table p-3 shadow rounded">
                         <thead>
@@ -173,8 +177,10 @@
                                 <td>Mark</td>
                                 <td>Otto</td>
                                 <td>
-                                    <button type="button" class="btn btn-warning rounded-pill mb-1" style="width: 70px;">edit</button>
-                                    <button type="button" class="btn btn-danger rounded-pill mb-1" style="width: 70px;">delete</button>
+                                    <button type="button" class="btn btn-warning rounded-pill mb-1"
+                                        style="width: 70px;">edit</button>
+                                    <button type="button" class="btn btn-danger rounded-pill mb-1"
+                                        style="width: 70px;">delete</button>
                                 </td>
                             </tr>
                             <tr>
@@ -182,8 +188,10 @@
                                 <td>Jacob</td>
                                 <td>Thornton</td>
                                 <td>
-                                    <button type="button" class="btn btn-warning rounded-pill mb-1" style="width: 70px;">edit</button>
-                                    <button type="button" class="btn btn-danger rounded-pill mb-1" style="width: 70px;">delete</button>
+                                    <button type="button" class="btn btn-warning rounded-pill mb-1"
+                                        style="width: 70px;">edit</button>
+                                    <button type="button" class="btn btn-danger rounded-pill mb-1"
+                                        style="width: 70px;">delete</button>
                                 </td>
                             </tr>
                             <tr>
@@ -191,8 +199,10 @@
                                 <td>Larry</td>
                                 <td>the Bird</td>
                                 <td>
-                                    <button type="button" class="btn btn-warning rounded-pill mb-1" style="width: 70px;">edit</button>
-                                    <button type="button" class="btn btn-danger rounded-pill mb-1" style="width: 70px;">delete</button>
+                                    <button type="button" class="btn btn-warning rounded-pill mb-1"
+                                        style="width: 70px;">edit</button>
+                                    <button type="button" class="btn btn-danger rounded-pill mb-1"
+                                        style="width: 70px;">delete</button>
                                 </td>
                             </tr>
                         </tbody>
@@ -238,19 +248,19 @@
                 </div>
             </footer>
         </div>
-        </div>
+    </div>
 
-        <!-- Optional JavaScript; choose one of the two! -->
+    <!-- Optional JavaScript; choose one of the two! -->
 
-        <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
-        <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-            crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
-            crossorigin="anonymous"></script>
-        <script src="/js/jquery-3.6.1.min.js"></script>
-        <script src="/js/index.js"></script>
+    <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
+        crossorigin="anonymous"></script>
+    <script src="/js/jquery-3.6.1.min.js"></script>
+    <script src="/js/index.js"></script>
 </body>
 
 </html>
