edit the height of some items

--- a/pages/formsInputs.html
+++ b/pages/formsInputs.html
@@ -299,7 +299,7 @@
                 </div>
                 <div class="row mt-5">
                     <div class="col-lg-4 col-md-4 col-sm-6">
-                        <form class="shadow bg-white rounded text-center p-3 mb-3" style="min-height: 60px;">
+                        <form class="shadow bg-white rounded text-center p-3 mb-3" style="min-height: 70px;">
                             <div class="form-check form-check-inline">
                                 <input class="form-check-input" name="checkbox" type="checkbox" id="inlineCheckbox1" value="option1">
                                 <label class="form-check-label" for="inlineCheckbox1">1</label>
@@ -323,7 +323,7 @@
                         </form>
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-6">
-                        <form class="shadow bg-white rounded text-center p-3 ml-1 mb-3" style="min-height: 60px;">
+                        <form class="shadow bg-white rounded text-center p-3 ml-1 mb-3" style="min-height: 70px;">
                             <div class="form-check form-check-inline">
                                 <input class="form-check-input" name="radio" type="radio" id="inlineradio1" value="option1">
                                 <label class="form-check-label" for="inlineradio1">1</label>
@@ -347,7 +347,7 @@
                         </form>
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-12">
-                        <div class="shadow bg-white rounded text-center p-3 ml-1">
+                        <div class="shadow bg-white rounded text-center p-3 ml-1" style="min-height: 70px;">
                             <div class="toggleBox">
                                 <input type="checkbox">
                                 <label for="" class="onbtn"></label>
